Using wkpdf instead

--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,12 @@ body{
   outline: 1300px solid #FAFAFA;
 }
 
+body.pdf {
+    width: auto;
+    background: #000;
+    margin: auto;
+}
+
 a{ color: #0645ad; text-decoration:none;}
 a:visited{ color: #0b0080; }
 a:hover{ color: #06e; }
@@ -124,7 +130,7 @@ body{font-size:16px;}
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
 }
-</style></head><body>
+</style></head><body class="normal">
 <div style="float: right">
 349 N 350 W<br />
 Bountiful, UT  84010<br />
@@ -264,11 +270,10 @@ Scifi - My top 3 movies are Gattaca, Fifth Element, and Prometheus</p>
 
 <p>Josh Braegger is a sharp engineer that’s passionate about solving problems. He literally devours them and leaves no stone unturned. He digs in and gets things done. He’s been a key engineer on several of our larger initiatives such as Community. He’s now a mentor and has grown into a key resource for all of engineering. Over the past two years Josh has also built credibility with his business counterparts and during much of this time he was also completing a CS degree with Weber State. Josh creates a fun working environment and welcomes change and opportunities for learning.”</p>
 
-<p>-- Joel Brazle, Director of Software Development, Backcountry.com</p>
+<p>-- Joel Brazle, Director of Product at Zillow (Previous Director of Software Development, Backcountry.com)</p>
 
 <hr />
 
 <p><a href="https://raw.github.com/rckclmbr/resume/master/resume.pdf">PDF</a><br />
-<a href="https://raw.github.com/rckclmbr/resume/master/resume.html">HTML</a><br />
 <a href="https://raw.github.com/rckclmbr/resume/master/resume.md">Markdown</a></p>
 </body></html>
