Fixing bullet points

--- a/resume.html
+++ b/resume.html
@@ -169,10 +169,13 @@ Bountiful, UT  84010<br />
 
 <p>A few coworkers went to start a company, and I wanted to join in. Cofounded with ex-Mozy employees, we set off to take cloud storage out of the traditional "cloud", and into users homes.</p>
 
-<p>Primary responsibilities:
-* Developed an Android client that communicates with our distributed filesystem
-* Built a pleasant API for hiding complex DHT and sync logic
-* Some ops work for provisioning and maintaining servers in EC2, ensuring scalability goals are met</p>
+<p>Primary responsibilities:</p>
+
+<ul>
+<li>Developed an Android client that communicates with our distributed filesystem</li>
+<li>Built a pleasant API for hiding complex DHT and sync logic</li>
+<li>Some ops work for provisioning and maintaining servers in EC2, ensuring scalability goals are met</li>
+</ul>
 
 <p>Programmed in Python, Java (Android), Go</p>
 
