--- a/resume.html
+++ b/resume.html
@@ -145,7 +145,7 @@ Bountiful, UT  84010<br />
 
 <h3>Objective</h3>
 
-<p>Currently seeking a generalist programming position with a brilliant team who can work together to build the impossible.</p>
+<p>Currently seeking a software position with a brilliant team, and help provide the necessary skills and connections to eventually start my own company.</p>
 
 <hr />
 
@@ -161,10 +161,24 @@ Bountiful, UT  84010<br />
 
 <h3>Work Experience</h3>
 
+<h4>GaiaGPS (Contract)</h4>
+
+<p>(Bountiful, UT)<br />
+  <strong>01/2014 - present</strong><br />
+<em>Senior Software Developer</em></p>
+
+<p>Although I have worked with GaiaGPS off and on doing contract work in the past several years, since leaving Space Monkey, I have been doing full-time contract work. Responsibilities include:</p>
+
+<ul>
+<li>Built initial iteration of cloud functionality for cloud.gaiagps.com, for sync between multiple devices</li>
+<li>Built web map and printing feature for GaiaCloud, using Leaflet</li>
+<li>Do maintenance and minor bugixes on trailbehind.com</li>
+</ul>
+
 <h4>Space Monkey</h4>
 
 <p>(Salt Lake City, UT)<br />
-  <strong>02/2013 - present</strong><br />
+  <strong>02/2013 - 01/2014</strong><br />
 <em>Senior Software Developer</em></p>
 
 <p>A few coworkers went to start a company, and I wanted to join in. Cofounded with ex-Mozy employees, we set off to take cloud storage out of the traditional "cloud", and into users homes.</p>
@@ -259,7 +273,7 @@ Graduated Cum Laude with a Bachelors of Science</p>
 
 <p>Running - Have run 1 half-ironman, 4 marathons, and countless of smaller races.<br />
 Snowboarding, rock climbing, and outdoor sports<br />
-Scifi - My top 3 movies are Gattaca, Fifth Element, and Prometheus</p>
+Scifi - My top 3 movies are Gattaca, Fifth Element, and Gravity</p>
 
 <hr />
 
