--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@ body{
 
 body.pdf {
     width: auto;
-    background: #000;
+    background: #ffffff;
     margin: auto;
 }
 
@@ -145,7 +145,7 @@ Bountiful, UT  84010<br />
 
 <h3>Objective</h3>
 
-<p>Currently seeking a software position with a brilliant team, and help provide the necessary skills and connections to eventually start my own company.</p>
+<p>Currently seeking a software position with a brilliant team, to be on the bleeding edge working to provide end users with new experiences.</p>
 
 <hr />
 
@@ -153,26 +153,29 @@ Bountiful, UT  84010<br />
 
 <p>Industries: Ecommerce, Music streaming, Distributed file storage, Realtime notifications</p>
 
-<p>Languages, Markups, Transports, and Formats: Python, Java, Javascript, Perl, Go, bash, HTTP, SSL, JSON, protobufs, XML, Regex, HTML, CSS</p>
+<p>Languages, Markups, Transports, and Formats: Python, Java, Javascript, Go, Perl, bash, HTTP, SSL, JSON, protobufs, XML, Regex, HTML, CSS</p>
 
-<p>Technologies and Frameworks: Django, Android, JSON, LevelDB, MongoDB, Twisted, jQuery, YUI, Git, SVN, CVS, openssl, httpd, nginx, docker, puppet, memcached, MogileFS, Postgres, MySQL, JIRA, Trello, Rally, Sprintly, Bugzilla, Jersey, Spring, Hibernate, Wicket, Eclipse, Interchange.</p>
+<p>Technologies and Frameworks: Django, Android, JSON, LevelDB, MongoDB, Twisted, jQuery, Git, openssl, httpd, nginx, docker, puppet, memcached, Postgres, MySQL, AWS, Trello, Jersey, Spring, Hibernate.</p>
 
 <hr />
 
 <h3>Work Experience</h3>
 
-<h4>GaiaGPS (Contract)</h4>
+<h4>GaiaGPS</h4>
 
 <p>(Bountiful, UT)<br />
   <strong>01/2014 - present</strong><br />
 <em>Senior Software Developer</em></p>
 
-<p>Although I have worked with GaiaGPS off and on doing contract work in the past several years, since leaving Space Monkey, I have been doing full-time contract work. Responsibilities include:</p>
+<p>Although I have worked with GaiaGPS off and on doing contract work in the past several years, since leaving Space Monkey, I have been doing full-time work. Responsibilities include:</p>
 
 <ul>
-<li>Built initial iteration of cloud functionality for cloud.gaiagps.com, for sync between multiple devices</li>
-<li>Built web map and printing feature for GaiaCloud, using Leaflet</li>
-<li>Do maintenance and minor bugixes on trailbehind.com</li>
+<li>Built initial iteration of cloud functionality for www.gaiagps.com, www.tryskipper.com, and cloud.hemaexplorer.com.au for sync between multiple devices.</li>
+<li>Built web map and printing feature for GaiaCloud, using Leaflet and AngularJS</li>
+<li>Built a production environment on coreos/docker in Amazon Web Services, and deployment tools around fleet.</li>
+<li>Adhered to 12factor methodology (http://12factor.net/) for application</li>
+<li>Added ability to purchase subscriptions through Stripe</li>
+<li>Maintained GaiaGPS Android application</li>
 </ul>
 
 <h4>Space Monkey</h4>
@@ -291,6 +294,8 @@ Scifi - My top 3 movies are Gattaca, Fifth Element, and Gravity</p>
 
 <hr />
 
-<p><a href="https://raw.github.com/rckclmbr/resume/master/resume.pdf">PDF</a><br />
-<a href="https://raw.github.com/rckclmbr/resume/master/resume.md">Markdown</a></p>
+<!--
+[PDF](https://raw.github.com/rckclmbr/resume/master/resume.pdf)<br />
+[Markdown](https://raw.github.com/rckclmbr/resume/master/resume.md)
+-->
 </body></html>
