--- a/resume.html
+++ b/resume.html
@@ -132,40 +132,53 @@ body{font-size:16px;}
 }
 </style></head><body class="normal">
 <div style="float: right">
-349 N 350 W<br />
-Bountiful, UT  84010<br />
+Foster City, CA  94404<br />
 (801) 502-3409<br />
 </div>
 
-<h1>Joshua R. Braegger</h1>
+<h1>Josh Braegger</h1>
 
-<h3>Senior Software Engineer</h3>
+<h3>Software Engineer</h3>
 
 <hr />
 
 <h3>Objective</h3>
 
-<p>Currently seeking a software position with a brilliant team, to be on the bleeding edge working to provide end users with new experiences.</p>
+<p>To give everyone the same opportunities that I've had in life.  To help the human race progress.</p>
 
-<hr />
+<p>As far as what environment I thrive in and am looking for:</p>
 
-<h3>Technical Skills</h3>
-
-<p>Industries: Ecommerce, Music streaming, Distributed file storage, Realtime notifications</p>
-
-<p>Languages, Markups, Transports, and Formats: Python, Java, Javascript, Go, Perl, bash, HTTP, SSL, JSON, protobufs, XML, Regex, HTML, CSS</p>
-
-<p>Technologies and Frameworks: Django, Android, JSON, LevelDB, MongoDB, Twisted, jQuery, Git, openssl, httpd, nginx, docker, puppet, memcached, Postgres, MySQL, AWS, Trello, Jersey, Spring, Hibernate.</p>
+<ul>
+<li>I have strong technical skills, but find solving the human problems a more interesting and rewarding challenge.</li>
+<li>Have experience leading and mentoring, but prefer to lead by example.  As a result, prefer to remain an individual contributor.</li>
+</ul>
 
 <hr />
 
 <h3>Work Experience</h3>
 
+<h4>Facebook</h4>
+
+<p>(Menlo Park, CA)</br />
+ <strong>08/2015 - present</strong><br />
+<em>Software Engineer</em></p>
+
+<p>Helped connect 100 million people to the internet -- https://techcrunch.com/2018/04/25/internet-org-100-million/</p>
+
+<ul>
+<li>Helped build and scale Free Basics and other Internet.org projects</li>
+<li>Worked on the "Shared Infra" team to help build common infrastructure across Connectivity projects (https://connectivity.fb.com/)</li>
+<li>Set product quality goals that required collaboration with multiple teams throughout the org</li>
+<li>Worked with and built tooling to help our partners scale.  This includes management, deployment, and monitoring software</li>
+<li>Created and maintained a cross-team open forum for gathering collective cross-functional feedback (aka "Design Reviews")</li>
+<li>Mentored and collaborated with many engineers</li>
+</ul>
+
 <h4>GaiaGPS</h4>
 
 <p>(Bountiful, UT)<br />
-  <strong>01/2014 - present</strong><br />
-<em>Senior Software Developer</em></p>
+  <strong>01/2014 - 06/2015</strong><br />
+<em>Software Engineer</em></p>
 
 <p>Although I have worked with GaiaGPS off and on doing contract work in the past several years, since leaving Space Monkey, I have been doing full-time work. Responsibilities include:</p>
 
@@ -173,7 +186,6 @@ Bountiful, UT  84010<br />
 <li>Built initial iteration of cloud functionality for www.gaiagps.com, www.tryskipper.com, and cloud.hemaexplorer.com.au for sync between multiple devices.</li>
 <li>Built web map and printing feature for GaiaCloud, using Leaflet and AngularJS</li>
 <li>Built a production environment on coreos/docker in Amazon Web Services, and deployment tools around fleet.</li>
-<li>Adhered to 12factor methodology (http://12factor.net/) for application</li>
 <li>Added ability to purchase subscriptions through Stripe</li>
 <li>Maintained GaiaGPS Android application</li>
 </ul>
@@ -182,7 +194,7 @@ Bountiful, UT  84010<br />
 
 <p>(Salt Lake City, UT)<br />
   <strong>02/2013 - 01/2014</strong><br />
-<em>Senior Software Developer</em></p>
+<em>Software Engineer</em></p>
 
 <p>A few coworkers went to start a company, and I wanted to join in. Cofounded with ex-Mozy employees, we set off to take cloud storage out of the traditional "cloud", and into users homes.</p>
 
@@ -200,7 +212,7 @@ Bountiful, UT  84010<br />
 
 <p>(Park City, UT)<br />
    <strong>01/2012 - 02/2013</strong><br />
-<em>Senior Software Developer / Team Lead</em></p>
+<em>Software Engineer / Team Lead</em></p>
 
 <p>I rejoined Backcountry.com to help with their replatforming project, to take their front-end architecture from Interchange (perl) to ATG (java).  New things done that aren't mentioned below are:</p>
 
@@ -216,7 +228,7 @@ Bountiful, UT  84010<br />
 
 <p>(Salt Lake City, UT)<br />
   <strong>11/2010 - 12/2012</strong><br />
-<em>Senior Software Developer</em></p>
+<em>Software Engineer</em></p>
 
 <p>Joined Beyond Oblivion because it provided some interesting challenges in that it was a startup so I'd be wearing many hats, the problem space (music) was interesting, scalability was a concern, and the data retrieved could be incredibly interesting.  In the time I was employed, I was able to:</p>
 
@@ -236,7 +248,7 @@ Bountiful, UT  84010<br />
 
 <p>(Park City, UT)<br />
    <strong>2/2007 - 11/2010</strong><br />
-<em>Senior Software Engineer</em></p>
+<em>Software Engineer</em></p>
 
 <p>I've been working on Backcountry.com's Community project since its inception, bringing product questions and answers, reviews, gear photos, and user profiles from the minds of visionaries to actual implementation. It consists of a robust, event-driven model providing real-time collaboration to hundreds of thousands of visitors of our website. It was built using perl and the Interchange framework, Rose::DB ORM, memcached, mogilefs, and Moose.  Also took advantage of S3 and EC2.</p>
 
@@ -246,7 +258,7 @@ Bountiful, UT  84010<br />
 
 <p>(Remote)<br />
   <strong>10/2008 - 1/2010</strong><br />
-<em>Lead Developer</em></p>
+<em>Software Engineer</em></p>
 
 <p>Moonlighted at notify.me to "deliver time sensitive information directly to the user in near real time", particularly because I was interested in the event-driven architecture and distributed systems.  I worked 10-20 hours per week while employed at Backcountry.com.  Worked on backend features such as improving malformed HTML in websites we consumed, making it more readable for our parser, and various website improvements, including providing a "notification bar" (similar to the Digg bar) on click-thru pages.  Used perl, Catalyst, postgres. </p>
 
@@ -254,7 +266,7 @@ Bountiful, UT  84010<br />
 
 <p>(Ogden, UT)<br />
    <strong>03/2006 - 02/2007</strong><br />
-<em>Software Developer</em></p>
+<em>Software Engineer</em></p>
 
 <p>Developed a web-based loan servicing application for banks and credit unions across the country.  Used Coldfusion, with SQL Server 2000.  Worked on converting a COBOL flat-file based system into a relational, object-oriented model.</p>
 
@@ -266,31 +278,14 @@ Bountiful, UT  84010<br />
 
 <p>Weber State University<br />
 Graduated: 2008<br />
-Major: Computer Science<br />
-GPA: 3.74<br />
-Graduated Cum Laude with a Bachelors of Science</p>
+Graduated Cum Laude with a Bachelors of Science (CS)</p>
 
 <hr />
 
 <h3>Hobbies / Interests</h3>
 
-<p>Running - Have run 1 half-ironman, 4 marathons, and countless of smaller races.<br />
-Snowboarding, rock climbing, and outdoor sports<br />
-Scifi - My top 3 movies are Gattaca, Fifth Element, and Gravity</p>
-
-<hr />
-
-<h3>Recommendations</h3>
-
-<p>(From LinkedIn - http://www.linkedin.com/in/joshbraegger)</p>
-
-<p>Josh is a young rockstar with lots of enthusiasm, a great natural sense for good software design, and a solid pragmatic head on his shoulders. He produces a lot of high quality solutions within the Backcountry organization and is a fantastic asset that just gets it done. Josh is passionate about his work and will invest the time and energy to work through a tough problem as a group and as an individual. Despite being right most of the time, Josh isn't a big ego and has the respect and admiration of his peers.”</p>
-
-<p>-- Chris Alef, current Amazon employee (previously at Backcountry.com)</p>
-
-<p>Josh Braegger is a sharp engineer that’s passionate about solving problems. He literally devours them and leaves no stone unturned. He digs in and gets things done. He’s been a key engineer on several of our larger initiatives such as Community. He’s now a mentor and has grown into a key resource for all of engineering. Over the past two years Josh has also built credibility with his business counterparts and during much of this time he was also completing a CS degree with Weber State. Josh creates a fun working environment and welcomes change and opportunities for learning.”</p>
-
-<p>-- Joel Brazle, Director of Product at Zillow (Previous Director of Software Development, Backcountry.com)</p>
+<p>Cycling - mostly to work and back.<br />
+Video games - so I can keep up with my son.<br /></p>
 
 <hr />
 
